--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
- <nav>
+<nav>
      <ul>
-       <li> <a href="/home"> Home </a> </li>
-       <li> <a href="/about"> About </a> </li>
+       <li> <a [routerLink]="['home']"> Home </a> </li>
+       <li> <a [routerLink]="['about']"> About </a> </li>
      </ul>
    </nav>
    <h1> {{ title }} </h1>
